提交更新情况

--- a/ES6/迭代器/迭代器.html
+++ b/ES6/迭代器/迭代器.html
@@ -16,7 +16,7 @@
                 gender: "女"
             };*/
 
-            for(let arr in arrs){
+            for(let arr of arrs){
                 console.log(arr);
             }
 
