--- a/ES6/promise/promise.html
+++ b/ES6/promise/promise.html
@@ -25,7 +25,7 @@
             p.then(function (value) {
                 console.log(value);
             },function (reason) {
-                console.log(reason);
+                console.log("reason:" + reason);
             })
 
 
